--- a/confirmation.html
+++ b/confirmation.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="https://i.ibb.co/6RbjvrwL/fam-ofc.jpg"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Confirmation de Commande</title>
   <style>
@@ -96,7 +97,7 @@
         <h2>Commande envoyée avec succès !</h2>
         <p><strong>ID Commande :</strong> ${commandeID}</p>
         <p><strong>Nom :</strong> ${nom}</p>
-        <p><strong>Téléphone :</strong> ${numero}</p>
+        <p><strong>Téléphone :</strong> +${numero}</p>
         <p><strong>Email :</strong> ${email}</p>
         <p><strong>Pays :</strong> ${pays}</p>
         <p><strong>Mode de paiement :</strong> ${modePaiement}</p>
