--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ country: haïti -->
     <title>home,& Big topup</title>
     <link rel="stylesheet" href="styl.css" />
     <!-- Linking Google Fonts for Icons -->
+	  <link rel="icon" type="image/png" href="https://i.ibb.co/6RbjvrwL/fam-ofc.jpg"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
 <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
 
@@ -591,11 +592,11 @@ vous trouverais des produits comme recharge free fire, recharge pay pall, abonne
 
 <a href=""><button style="width: 80%;height: 35px;margin: 35px;background-color: var(--accent-color);color: var(--base-variant);border-radius: 15px; border: 1px solid ">allez a la boutique ➜</button></a>
 
-<h2 style="text-align: center;color: var(--secondary-text);">𝖠𝗏𝖾𝖼 𝖡𝗂𝗀 𝖳𝗈𝗉 𝖴𝗉 𝗋𝖾𝖼𝗁𝖺𝗋𝗀𝖾𝗓 𝗌𝖺𝗇𝗍 𝗅𝗂𝗆𝗂𝗍 𝖾𝗍 𝖺𝗏𝖾𝖼 𝖿𝗂𝖺𝖻𝗂𝗅𝗂𝗍𝖾́ ✔︎ <br>𝗏𝗈𝗍𝗋𝖾 𝗌𝖺𝗍𝗂𝗌𝖿𝖺𝖼𝗍𝗂𝗈𝗇 𝖾𝗌𝗍 𝗇𝗈𝗍𝗋𝖾 𝗉𝗋𝗂𝗈𝗋𝗂𝗍𝖾́ ✔︎</h2><br><br>
+<h2 style="text-align: center;color: var(--secondary-text);">𝗖𝗼𝗺𝗺𝗮𝗻𝗱𝗲𝘇 𝗲𝗻 𝘁𝗼𝘂𝘁𝗲 𝗰𝗼𝗻𝗳𝗶𝗮𝗻𝗰𝗲 𝗲𝘁 𝗯𝗼𝗼𝘀𝘁𝗲𝘇 𝘃𝗼𝘁𝗿𝗲 𝗲𝘅𝗽é𝗿𝗶𝗲𝗻𝗰𝗲 𝗱𝗲 𝗷𝗲𝘂 !<br>𝗏𝗈𝗍𝗋𝖾 𝗌𝖺𝗍𝗂𝗌𝖿𝖺𝖼𝗍𝗂𝗈𝗇 𝖾𝗌𝗍 𝗇𝗈𝗍𝗋𝖾 𝗉𝗋𝗂𝗈𝗋𝗂𝗍𝖾́ ✔︎</h2><br><br>
 <div class="faq" style="text-align:center;margin-top:50px;color:var(--secondary-text);margin:30px;">
 <h2 style="font-weight:bold;">𝐅𝐀𝐐</h2>
 
-<h2>comment achetez sur le site ❓</h2>
+<h2>Comment achetez sur le site ❓</h2>
 <h4>si vous ne savez pas encore comment achetez ils existent un tuto deja disponible sur youtube pour vous guidé appuyez sur cet icon pour trouvez le tuto </h4>
 <a href="https://www.youtube.com/@BIGTOPUP-509"><i style="color:red;font-size:50px;" class='bx bxl-youtube'></i></a>
 <br><br><br>
