--- a/freefireshop.html
+++ b/freefireshop.html
@@ -7,6 +7,7 @@ country: haïti -->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	  <link rel="icon" type="image/png" href="https://i.ibb.co/6RbjvrwL/fam-ofc.jpg"/>
     <title>freefire/shop/Big topup</title>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
@@ -629,7 +630,7 @@ label{
       </nav>
     </aside>
 <div class="logo">
-<a href="index.html"><img src="https://files.catbox.moe/50yh0r.jpeg" class="logo-Big"></a><br><br>
+<a href="index.html"><img src="https://i.ibb.co/6RbjvrwL/fam-ofc.jpg" class="logo-Big"></a><br><br>
 <h2 style="color: var(--secondary-text);text-align:center;font-size:30px;" class="free">FREE FIRE</h2>
 </div>
 <div class="ffshop">
