--- a/freefireshop.html
+++ b/freefireshop.html
@@ -546,7 +546,7 @@ label{
       <!-- Sidebar Header -->
       <header class="sidebar-header">
         <a href="index.html" class="header-logo">
-          <img src="https://files.catbox.moe/50yh0r.jpeg" alt="Bigtopup" />
+          <img src="https://i.ibb.co/6RbjvrwL/fam-ofc.jpg" alt="Bigtopup" />
         </a>
         <button class="sidebar-toggler">
           <span class="material-symbols-rounded">chevron_left</span>
