--- a/index.html
+++ b/index.html
@@ -458,8 +458,8 @@ p{
     <aside class="sidebar">
       <!-- Sidebar Header -->
       <header class="sidebar-header">
-        <a href="#" class="header-logo">
-          <img src="https://files.catbox.moe/50yh0r.jpeg" alt="Bigtopup" />
+        <a href="index.html" class="header-logo">
+          <img src="https://i.ibb.co/6RbjvrwL/fam-ofc.jpg" alt="HaitianTP" />
         </a>
         <button class="sidebar-toggler">
           <span class="material-symbols-rounded">chevron_left</span>
