--- a/validation.html
+++ b/validation.html
@@ -506,7 +506,7 @@ label{
       <!-- Sidebar Header -->
       <header class="sidebar-header">
         <a href="index.html" class="header-logo">
-          <img src="https://files.catbox.moe/50yh0r.jpeg" alt="Bigtopup" />
+          <img src="https://i.ibb.co/6RbjvrwL/fam-ofc.jpg" alt="Bigtopup" />
         </a>
         <button class="sidebar-toggler">
           <span class="material-symbols-rounded">chevron_left</span>
@@ -590,7 +590,7 @@ label{
       </nav>
     </aside>
 <div class="logo">
-<a href="index.html"><img src="https://files.catbox.moe/50yh0r.jpeg" class="logo-Big"></a><br><br>
+<a href="index.html"><img src="https://i.ibb.co/6RbjvrwL/fam-ofc.jpg" class="logo-Big"></a><br><br>
 
 
 
