--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ country: haïti -->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>home,& Big topup</title>
+    <title>HAITIANTOPUP</title>
     <link rel="stylesheet" href="styl.css" />
     <!-- Linking Google Fonts for Icons -->
 	  <link rel="icon" type="image/png" href="https://i.ibb.co/6RbjvrwL/fam-ofc.jpg"/>
@@ -547,8 +547,9 @@ p{
 <div class="logo">
 <a href="index.html"><img src="https://i.ibb.co/6RbjvrwL/fam-ofc.jpg" class="logo-Big"></a><br><br>
 <h2 style="color: var(--secondary-text);font-size: 50px;text-align:center;">𝐁𝐢𝐞𝐧𝐯𝐞𝐧𝐮𝐞 𝐝𝐚𝐧𝐬 Haitian top up</h2>
-<p style="text-align:center;font-size: 15px;">achetez vos produit numeriques en toute securité entre les main d'une compagnie fiable et rapide <br><br>
-vous trouverais des produits comme recharge free fire, recharge pay pall, abonnement netflix, abonnement crunchyroll, carte apple etc...</p>
+<p style="text-align:center;font-size: 15px;">Achetez vos produit numeriques en toute securité entre les main d'une compagnie fiable et sécurisé, et instantané.<br><br>
+
+Vous trouverais des produits comme recharge Free Fire, Pay pal, Abonnement Netflix, Abonnement crunchyroll,et carte apple etc...</p>
 <a href="https://api.whatsapp.com/send/?phone=50944197907&text=bonjour+je+suis+l’un+des+clients+de+Haitiantopup&type=phone_number&app_absent=0"><i style="color:green;position:fixed;font-size:50px;top:320px;left:300px;" class='bx bxl-whatsapp-square'></i></a>
 <div class="aka" style="text-align: center;">
 		<img src="https://files.catbox.moe/7lwjft.jpeg" alt="bigtopup" style="width: 30%;border-radius: 15px;">
@@ -570,7 +571,7 @@ vous trouverais des produits comme recharge free fire, recharge pay pall, abonne
 <h3 style="color: var(--secondary-text);text-align: center;">➤ 𝖭𝖤𝖳𝖥𝖫𝖨𝖷</h3>
 </div>
 <img src="https://files.catbox.moe/uxrjjf.jpg" alt="Bigtopup" style="margin-top: 20px;width: 200px;border-radius: 15px;">
-<p style="color: var(--secondary-text);">regardez des films et series avec netflix</p>
+<p style="color: var(--secondary-text);">Offrez le divertissement avec une carte cadeau Netflix et plongez dans un monde de streaming sans limites !</p>
 <a href="404.html"><button style="background-color: var(--accent-color);width: 100px;height: 35px;border-radius: 15px;border: 1px solid var(--base-variant); margin-bottom: 15px;color: var(--base-variant);">achetez</button></a>
 </div>
 <div class="img-product" style="border: 1px solid var(--secondary-text);width: 80%;margin: 10px;border-radius: 10px;text-align: center;margin-left: 40px;" >
@@ -578,7 +579,7 @@ vous trouverais des produits comme recharge free fire, recharge pay pall, abonne
 <h3 style="color: var(--secondary-text);text-align: center;">➤ 𝖥𝖱𝖤𝖤 𝖥𝖨𝖱𝖤</h3>
 </div>
 <img src="https://files.catbox.moe/7lwjft.jpeg" alt="Bigtopup" style="margin-top: 20px;width: 200px;border-radius: 15px;">
-<p style="color: var(--secondary-text);">rechargez vos comptes free fire avec des diamont pour un voyage plus imaginaires</p>
+<p style="color: var(--secondary-text);">Rechargez vos comptes Free Fire avec des diamant pour un voyage plus imaginaires.</p>
 <a href="freefireshop.html"><button style="background-color: var(--accent-color);width: 100px;height: 35px;border-radius: 15px;border: 1px solid var(--base-variant); margin-bottom: 15px;color: var(--base-variant);">achetez</button></a>
 </div>
 <div class="img-product" style="border: 1px solid var(--secondary-text);width: 80%;margin: 10px;border-radius: 10px;text-align: center;margin-left: 40px;" >
@@ -586,7 +587,7 @@ vous trouverais des produits comme recharge free fire, recharge pay pall, abonne
 <h4 style="color: var(--secondary-text);text-align: center;">➤ 𝖢𝖠𝖱𝖳𝖤 𝖠𝖯𝖯𝖫𝖤</h4>
 </div>
 <img src="https://files.catbox.moe/tdokxn.jpeg" alt="Bigtopup" style="margin-top: 20px;width: 200px;border-radius: 15px;">
-<p style="color: var(--secondary-text);">avec apple card vos portefeuil sont près de vous</p>
+<p style="color: var(--secondary-text);">Apple Gift Card (Carte cadeau Apple) : Il s’agit d’une carte prépayée émise par Apple qui peut être utilisée pour acheter des produits, des applications, de la musique, des films et d’autres contenus dans l’écosystème Apple.</p>
 <a href="404.html"><button style="background-color: var(--accent-color);width: 100px;height: 35px;border-radius: 15px;border: 1px solid var(--base-variant); margin-bottom: 15px;color: var(--base-variant);">achetez</button></a>
 </div>
 
@@ -612,21 +613,21 @@ vous trouverais des produits comme recharge free fire, recharge pay pall, abonne
 <div class="link" style="margin: 45px;margin-top:70px;border-top:1px solid var(--secondary-text);font-size:20px;"><br><br>
 <h3 style="color:red">link</h3>
 <ul>
-	<li><a href="freefireshop.html">free fire</a></li>
-	<li><a href="404.html">carte apple</a></li>
-	<li><a href="404.html">crunchyroll</a></li>
-	<li><a href="404.html">paypall</a></li>
-	<li><a href="404.html">netflix</a></li>
-<h3 style="color:red">visit</h3>
-	<li><a href="#">a propos</a></li>
-	<li><a href="index.html">home</a></li>
-	<li><a href="boutique.html">services</a></li>
-	<li><a href="contact.html">contact</a></li>
+	<li><a href="freefireshop.html">Free Fire</a></li>
+	<li><a href="404.html">Carte Apple</a></li>
+	<li><a href="404.html">Crunchyroll</a></li>
+	<li><a href="404.html">Pay Pall</a></li>
+	<li><a href="404.html">Netflix</a></li>
+<h3 style="color:red">Visit</h3>
+	<li><a href="#">À ropos</a></li>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="boutique.html">Service</a></li>
+	<li><a href="contact.html">Contact</a></li>
 	
-	<h3 style="color:red">media</h3>
+	<h3 style="color:red">Media</h3>
 	<a href="https://www.youtube.com/@BIGTOPUP-509"><i class='bx bxl-youtube'></i></a>
-	<a href="https://www.tiktok.com/@bigffx3"><i class='bx bxl-tiktok' ></i></a>
-	<a href="https://www.instagram.com/big_top_up509/"><i class='bx bxl-instagram' ></i></a>
+	<a href="https://vm.tiktok.com/ZMSJrDcbq/"><i class='bx bxl-tiktok' ></i></a>
+	<a href="https://www.instagram.com/haitiantopup01?igsh=MWg0M2R6ZWdveG5qcg=="><i class='bx bxl-instagram' ></i></a>
 	<a href="https://api.whatsapp.com/send/?phone=50934289362&text&type=phone_number&app_absent=0&wame_ctl=1"><i class='bx bxl-whatsapp' ></i></a>
 </ul>
 </div>
