--- a/index.html
+++ b/index.html
@@ -563,7 +563,8 @@ Vous trouverais des produits comme recharge Free Fire, Pay pal, Abonnement Netfl
 <h4 style="color: var(--secondary-text);text-align: center;">➤ 𝖢𝖱𝖴𝖭𝖢𝖧𝖸𝖱𝖮𝖫𝖫 </h4>
 </div>
 <img src="https://files.catbox.moe/grnzv3.jpg" alt="Bigtopup" style="margin-top: 20px;width: 200px;border-radius: 15px;">
-<p style="color: var(--secondary-text);">regardez vos anime preferés avec crunchyroll</p>
+<p style="color: var(--secondary-text);"> Plongez dans l’univers des animes 
+Profitez des meilleurs animes du moment grâce à notre sélection exclusive d’abonnements</p>
 <a href="404.html"><button style="background-color: var(--accent-color);width: 100px;height: 35px;border-radius: 15px;border: 1px solid var(--base-variant); margin-bottom: 15px;color: var(--base-variant);">achetez</button></a>
 </div>
 <div class="img-product" style="border: 1px solid var(--secondary-text);width: 80%;margin: 10px;border-radius: 10px;text-align: center;margin-left: 40px;" >
