--- a/freefireshop.html
+++ b/freefireshop.html
@@ -737,20 +737,20 @@ Garena Free Fire Garena Free Fire, également connu sous le nom de Free Fire, es
 
 
 <div class="link" style="margin: 45px;">
-<h3 style="color:red">link</h3>
+<h3 style="color:red">Link</h3>
 <ul>
-	<li><a href="freefireshop.html">free fire</a></li>
-	<li><a href="#">carte apple</a></li>
+	<li><a href="freefireshop.html">Free Fire</a></li>
+	<li><a href="#">Carte Apple</a></li>
 	<li><a href="#">crunchyroll</a></li>
-	<li><a href="#">paypall</a></li>
-	<li><a href="404.html">netflix</a></li>
-<h3 style="color:red">visit</h3>
-	<li><a href="#">a propos</a></li>
-	<li><a href="index.html">home</a></li>
-	<li><a href="#">services</a></li>
-	<li><a href="#">contact</a></li>
+	<li><a href="#">Pay Pall</a></li>
+	<li><a href="404.html">Netflix</a></li>
+<h3 style="color:red">Visit</h3>
+	<li><a href="#">À Propos</a></li>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="#">Services</a></li>
+	<li><a href="#">Contact</a></li>
 	
-	<h3 style="color:red">media</h3>
+	<h3 style="color:red">Media</h3>
 	<a href="#"><i class='bx bxl-youtube'></i></a></li>
 	<a href="#"><i class='bx bxl-tiktok' ></i></a></li>
 	<a href="#"><i class='bx bxl-instagram' ></i></a></li>
