--- a/freefireshop.html
+++ b/freefireshop.html
@@ -705,8 +705,8 @@ Garena Free Fire Garena Free Fire, également connu sous le nom de Free Fire, es
   </div>
 
   <!-- Bouton pour afficher/masquer le panier -->
-  <button style="position:fixed;right:35px;top:350px;" class="panier-toggle" onclick="togglePanier()">
-    <i class="fas fa-shopping-cart"></i> 🛒
+  <button style="position:fixed;right:35px;top:300px;background: none;border:none;" class="panier-toggle" onclick="togglePanier()">
+<h1 style="font-size:40px;;"><i  style="color: var(--accent-color);"class='bx bxs-shopping-bags'></i></h1>
     <span id="badge-panier" class="badge">0</span>
   </button>
 
@@ -741,7 +741,7 @@ Garena Free Fire Garena Free Fire, également connu sous le nom de Free Fire, es
 <ul>
 	<li><a href="freefireshop.html">Free Fire</a></li>
 	<li><a href="#">Carte Apple</a></li>
-	<li><a href="#">crunchyroll</a></li>
+	<li><a href="#">Crunchyroll</a></li>
 	<li><a href="#">Pay Pall</a></li>
 	<li><a href="404.html">Netflix</a></li>
 <h3 style="color:red">Visit</h3>
